--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Arnold Diep</title>
 </head>
 <body>
-    <header>
+    <header class="adjust4">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 text">Arnold Diep</div>
