--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Arnold Diep</title>
 </head>
 <body>
-    <header>
+    <header class="adjsut4">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 text">Arnold Diep</div>
@@ -43,7 +43,7 @@
                     <hr>
                     <div class="row adjust2">
                         <div class="col-sm-3">
-                            <img src="img_0665.jpg" class="img-fluid" alt="Responsive image">
+                            <img src="IMG_1041.jpeg" class="img-fluid" alt="Responsive image">
                         </div>
                         <div class="col-sm-9">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac feugiat metus. Vivamus tempus nec lacus a laoreet. Vivamus egestas id eros ut mollis. In hac habitasse platea dictumst. Etiam purus velit, vestibulum vel quam vitae, vestibulum cursus leo. Phasellus ut arcu neque. Vestibulum vel orci nisi. Morbi sed consectetur velit. Aenean urna ex, commodo nec aliquam ac, ornare eu massa. Donec ac pretium felis, vitae interdum lacus. Curabitur dignissim ante sem, ac elementum risus elementum et. Etiam lacinia tincidunt neque ut pellentesque. Fusce efficitur, justo non rhoncus tempor, felis leo gravida tellus, vel rhoncus nulla arcu et sem.</p>                   
