--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>Arnold Diep</title>
 </head>
 <body>
-    <header>
+    <header class="adjust4">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3 text">Arnold Diep</div>
@@ -42,8 +42,46 @@
                     <h1>Portfolio</h1>
                     <hr>
                     <div class="row">
-                        <div class="col-sm-3"></div>
-                        <div class="col-sm-9"></div>
+                        <div class="col-sm-6">
+                            <div class="card project">
+                                <img src="Hangman.jpg" class="card-img" alt="Hangman">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Hangman</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card project">
+                                <img src="RPS.jpeg" class="card-img" alt="Rock Paper Scissors">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Rock Paper Scissors</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card project">
+                                <img src="RPG.jpg" class="card-img" alt="RPG Game">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">RPG Game</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card project">
+                                <img src="Trivia.jpg" class="card-img" alt="Trivia Game">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Trivia Game</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="card project">
+                                <img src="info.png" class="card-img" alt="Info Widget">
+                                <div class="card-img-overlay">
+                                    <h5 class="card-title">Info Widget</h5>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
