--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
     <header class="adjust4">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3 text">Arnold Diep</div>
-                <div class="col-sm-9 text2">
-                    <ul class="nav justify-content-end">
+                <div class="col-sm-5 text">Arnold Diep</div>
+                <div class="col-sm-7 text2">
+                    <ul class="nav justify-content-end adjust6">
                         <li class="nav-item1">
                             <a href="index.html">About</a>
                         </li>
@@ -56,6 +56,7 @@
                                     <label for="exampleFormControlTextarea1">Message</label>
                                     <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Write something.." rows="3"></textarea>
                                 </div>
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
                         </div>
                     </div>
