--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Arnold Diep</title>
 </head>
+
 <body>
-    <header class="adjsut4">
+    <header class="adjust4">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3 text">Arnold Diep</div>
-                <div class="col-sm-9 text2">
-                    <ul class="nav justify-content-end">
+                <div class="col-sm-5 text">Arnold Diep</div>
+                <div class="col-sm-7 text2">
+                    <ul class="nav justify-content-end adjust6">
                         <li class="nav-item1">
                             <a href="index.html">About</a>
                         </li>
@@ -42,11 +45,19 @@
                     <h1>About Me</h1>
                     <hr>
                     <div class="row adjust2">
-                        <div class="col-sm-3">
-                            <img src="IMG_1041.jpeg" class="img-fluid" alt="Responsive image">
+                        <div class="col-md-3">
+                            <img class="adjust3" src="IMG_1041.jpeg" class="img-fluid" alt="Responsive image">
                         </div>
-                        <div class="col-sm-9">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac feugiat metus. Vivamus tempus nec lacus a laoreet. Vivamus egestas id eros ut mollis. In hac habitasse platea dictumst. Etiam purus velit, vestibulum vel quam vitae, vestibulum cursus leo. Phasellus ut arcu neque. Vestibulum vel orci nisi. Morbi sed consectetur velit. Aenean urna ex, commodo nec aliquam ac, ornare eu massa. Donec ac pretium felis, vitae interdum lacus. Curabitur dignissim ante sem, ac elementum risus elementum et. Etiam lacinia tincidunt neque ut pellentesque. Fusce efficitur, justo non rhoncus tempor, felis leo gravida tellus, vel rhoncus nulla arcu et sem.</p>                   
+                        <div class="col-md"></div>
+                        <div class="col-md-8">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac feugiat metus. Vivamus
+                                tempus nec lacus a laoreet. Vivamus egestas id eros ut mollis. In hac habitasse platea
+                                dictumst. Etiam purus velit, vestibulum vel quam vitae, vestibulum cursus leo. Phasellus
+                                ut arcu neque. Vestibulum vel orci nisi. Morbi sed consectetur velit. Aenean urna ex,
+                                commodo nec aliquam ac, ornare eu massa. Donec ac pretium felis, vitae interdum lacus.
+                                Curabitur dignissim ante sem, ac elementum risus elementum et. Etiam lacinia tincidunt
+                                neque ut pellentesque. Fusce efficitur, justo non rhoncus tempor, felis leo gravida
+                                tellus, vel rhoncus nulla arcu et sem.</p>
                         </div>
                     </div>
                 </div>
@@ -61,5 +72,15 @@
             </div>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
