--- a/portfolio.html
+++ b/portfolio.html
@@ -11,9 +11,9 @@
     <header class="adjust4">
         <div class="container">
             <div class="row">
-                <div class="col-sm-3 text">Arnold Diep</div>
-                <div class="col-sm-9 text2">
-                    <ul class="nav justify-content-end">
+                <div class="col-sm-5 text">Arnold Diep</div>
+                <div class="col-sm-7 text2">
+                    <ul class="nav justify-content-end adjust6">
                         <li class="nav-item1">
                             <a href="index.html">About</a>
                         </li>
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="col-sm-12"></div>
                 </div>
-                <div class="container">
+                <div class="container adjust">
                     <h1>Portfolio</h1>
                     <hr>
                     <div class="row">
