--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Arnold Diep</title>
 </head>
+
 <body>
     <header class="adjust4">
         <div class="container">
@@ -39,22 +43,35 @@
                     <div class="col-sm-12"></div>
                 </div>
                 <div class="container">
-                    <h1>Contact Me</h1>
+                    <h1>Don't be a stranger, just say hello.</h1>
                     <hr class="my-4">
                     <div class="row adjust2">
-                        <div class="col-sm-12">
-                            <form>
+                        <div class="col-md-6">
+                            <h3 style="padding: 0px; color: lightgrey">Email me!</h1>
+                                <p><b>tungd@uw.edu</b></p>
+                                <h3 style="padding: 0pxl; color: lightgrey">Feel like talking</h1>
+                                    <p style="margin-bottom: 30px"><b>+1 2065187513</b></p>
+                                    <a href=""> <i class="fa fa-file fa-4x"></i></a>
+                                    <a href="https://github.com/atdiep"> <i class="fa fa-github fa-4x"></i></a>
+                                    <a href="www.linkedin.com/in/atdiep93"> <i
+                                            class="fa fa-linkedin-square fa-4x"></i></a>
+                                    <a href="https://www.facebook.com/tung.diep.5"> <i
+                                            class="fa fa-facebook-square fa-4x"></i></a>
+                        </div>
+                        <div class="col-md-6">
+                            <form method="post" action="mailto:tungd@uw.edu" enctype="text/plain">
                                 <div class="form-group">
-                                    <label for="exampleFormControlInput1">Name</label>
-                                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Enter your full name.">
+                                    <input type="text" name="name" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Name">
                                 </div>
                                 <div class="form-group">
-                                        <label for="exampleFormControlInput1">Email address</label>
-                                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Please use a real one!">
-                                    </div>    
+                                    <input type="text" name="email" class="form-control" id="exampleFormControlInput1"
+                                        placeholder="Email">
+                                </div>
                                 <div class="form-group">
-                                    <label for="exampleFormControlTextarea1">Message</label>
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Write something.." rows="3"></textarea>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1"
+                                        placeholder="Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions."
+                                        rows="10"></textarea>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
@@ -73,4 +90,5 @@
         </div>
     </footer>
 </body>
+
 </html>
