--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Arnold Diep</title>
 </head>
 
@@ -46,18 +46,20 @@
                     <hr>
                     <div class="row adjust2">
                         <div class="col-md-3">
-                            <img class="adjust3" src="IMG_1041.jpeg" class="img-fluid" alt="Responsive image">
+                            <img class="adjust3" src="./assets/images/me.jpeg" class="img-fluid" alt="Responsive image">
                         </div>
-                        <div class="col-md"></div>
+                        <div class="col-md">
+                        </div>
                         <div class="col-md-8">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac feugiat metus. Vivamus
-                                tempus nec lacus a laoreet. Vivamus egestas id eros ut mollis. In hac habitasse platea
-                                dictumst. Etiam purus velit, vestibulum vel quam vitae, vestibulum cursus leo. Phasellus
-                                ut arcu neque. Vestibulum vel orci nisi. Morbi sed consectetur velit. Aenean urna ex,
-                                commodo nec aliquam ac, ornare eu massa. Donec ac pretium felis, vitae interdum lacus.
-                                Curabitur dignissim ante sem, ac elementum risus elementum et. Etiam lacinia tincidunt
-                                neque ut pellentesque. Fusce efficitur, justo non rhoncus tempor, felis leo gravida
-                                tellus, vel rhoncus nulla arcu et sem.</p>
+                            <p>Welcome to my page, my name is Arnold Diep. 
+                                I am currently enrolled at University of Washington Coding Boot Camp program, with an intent of becoming a Full Stack Software Developer. 
+                                I graduated from the University of Washington with a Bachelor of Science in Environmental Health in 2016. 
+                                I have 2+ years of experience in Occupational Health and Safety, with my recent employment as a Safety Specialist contractor to Everett Boeing. 
+                                While working there, I've had the privilege to work with a handful of Service Providers (subcontractors), such as Skanska, Kiewit, VECA, and ChemTreat. <br><br>
+                                Prior to the bootcamp, I had no coding experience but I have documented my successes and challenges of my journey by taking on weekly application project.
+                                I enjoy coding more and more now that have the grasp on the fundamentals. But there were times I felt hopeless because of a mountain of information I accumulated each week and a fast-paced class to cope with.
+                                Leveraging from my past experience and with the bootcamp support, I can confidently apply HTML5, CSS3, Bootstrap, and JavaScript to create a meaningful, engaging, and impactful experiences for my users.
+                            </p>
                         </div>
                     </div>
                 </div>
